--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.codemybrainsout.onboarding:onboarder:1.0.4'
 
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
