--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Tifants">
-        <activity android:name=".fragmentLogin"></activity>
-        <activity android:name=".loginActivity" />
-        <activity android:name=".SplashScreen">
+        <activity
+            android:name=".Activities.PreSchoolLogin"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.chooseLogin"
+            android:exported="true" />
+        <activity android:name=".Activities.DaycareLoginActivity" />
+        <activity android:name=".Activities.OnboardActivity" />
+        <activity android:name=".Activities.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".Activities.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
